--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="shortcut icon" type="image/png" href="./src/assets/favicon.png">
+        <link rel="shortcut icon" type="image/png" href="src/assets/icons/favicon.png">
         <title>Weather</title>
     </head>
     <body>
